# rsq

./: Cargo.toml  history.db  hizzy2.db  hizzy3.db  my_hizzy.db  my_hizzy.db-shm  my_hizzy.db-wal  readme.md
src/: database.rs  history_item.rs  main.rs  readme.md
