[package]
name = "rsq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
paw = "1.0.0"
rusqlite = {version = "0.28.0", features = ["chrono", "bundled", "trace"]}
simplelog = "0.12.0"
structopt = { version = "0.3", features = ["paw"] }
